Attempt spacing fix on index page

--- a/stylesheets/indexStyle.css
+++ b/stylesheets/indexStyle.css
@@ -30,5 +30,5 @@ div {
 
 i {
   margin: 0px 0px;
-  padding: 20px 12px;
+  padding: 20px 5px;
 }
